<resources>
    <string name="app_name">Life</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="toolbar_head">HIT官方通知</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="getMore">获取更多...</string>

    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>


    <string name="app1_describe">欢迎使用wgj的应用</string>
    <string name="crime_title_hint">crime title</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail">Detail</string>
    <string name="crime_solved_label">is solved</string>
    <string name="crime_test">Test</string>
    <string name="crime_crimefragment_hint">crime title</string>
    <string name="crime_crime_title">Title</string>
    <string name="crime_crime_detail">Detail</string>
    <string name="crime_crime_solved">Solved</string>
    <string name="crime_datepicker">Date:</string>
    <string name="crime_button_positive">ok</string>
    <string name="crime_button_negative">cancel</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show SubTitle</string>
    <string name="hide_subtitle">Hide SubTitle</string>
    <string name="subtitle_format">%1$s crimes</string>

    <plurals name="subtitle_plurals">
        <item quantity="one">%1$s crime</item>
        <item quantity="other">%1$s crimes</item>
    </plurals>
    <string name="alert_delete">警告！</string>
    <string name="button_select">选择联系人</string>
    <string name="button_sendMessage">发送信息</string>
    <string name="button_call">拨打电话</string>
    <string name="crime_report">%1$s
        The crime was discovered on %2$s, %3$s, and %4$S
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
